# comme-un-poisson-dans-l-eau

./: .eleventy.js  .gitignore  Makefile  README.md  commeunpoissondansleau.db  package-lock.json  package.json  requirements.txt
.github/workflows/: main.yml
11ty_input/: entretiens.njk  episode.njk  episodes-speciaux.njk  episodes.njk  index.njk  lectures.njk  livres.njk  soutenir.md  style.css
11ty_input/_data/: db.mjs  ressources.mjs
11ty_input/_includes/: episode-article.njk  livre.njk
11ty_input/_layouts/: default.njk
11ty_output/: index.html
examples/: example-result-google-books.json  example-result-youtube-api.json
scraper/: create_episode_ressources_rows.py  db.py  download_book_thumbs.py  download_episodes_audio.py  download_youtube_thumbs.py  extract_book_description.py  extract_book_title_and_authors.py  extract_episode_description.py  extract_episode_kind.py  extract_episode_published_at.py  extract_episode_slug.py  extract_episode_youtube_id.py  extract_isbns.py  extract_ressources.py  extract_youtube_published_at.py  fill_missing_data_from_google_books.py  fix_audio_filenames.py  fix_youtube_ids_in_ressources.py  pyproject.toml  scrap_videos.py
scripts/: change_pk_ressources.sql  create_transcript_markdown_files.py  db.py  extract_credits.py  extract_ressources.py  get_place_des_libraires_urls.py  insert.sql  list_episodes_text.py  scrap_google_books_json_data.py  scrap_missing_book_data_and_thumb_from_google_books.py  transcribe.py  transcribe_and_diarize.py  transcribe_with_spectropic.py  unique_rows_in_ressources.py  upload_audio_files.sh
(+5 files in other folders)
